--- a/web/index.html
+++ b/web/index.html
@@ -61,6 +61,7 @@
 						<li><span class="propert-name">Prijs:</span><span class="product_price"></span></li>
 						<li><span class="propert-name">Code:</span><span class="product_code"></span></li>
 						<li><span class="propert-name">Stof:</span><span class="product_stof"></span></li>
+						<li><span class="propert-name">Merk:</span><span class="product_merk"></span></li>
 					</ul>
 					<input class="product_amount" type="number" value="1" min="1">
 					<input class="product_id" type="hidden" name="id" data-json="">
@@ -125,7 +126,10 @@
               clone.querySelector(".product_description").textContent =`${product.description.substr(0, 100)}...`
               clone.querySelector(".product_price").textContent = `€ ${product.price.toFixed(2)}`
               clone.querySelector(".product_code").textContent = product.product_code
-              clone.querySelector(".product_stof").value = product.stof
+			  /*
+			  clone.querySelector(".product_stof").textContent = stof
+              clone.querySelector(".product_merk").textContent = merk
+			  */
 			  clone.querySelector(".product_id").value = product.id
               clone.querySelector(".product_id").dataset.json = JSON.stringify(product)
               clone.querySelector(".product_image").src =`/images/${product.id}.jpg`
