--- a/web/product.html
+++ b/web/product.html
@@ -53,6 +53,10 @@
             <ul class="product-properties">
             <li><span class="propert-name">Prijs:</span><span class="product_price"></span></li>
             <li><span class="propert-name">Code:</span><span class="product_code"></span></li>
+            <li><span class="propert-name">Stof:</span><span class="product_stof"></span></li>
+            <li><span class="propert-name">Merk:</span><span class="product_merk"></span></li>
+            <li><span class="propert-name">Gemaakt:</span><span class="product_gemaakt"></span></li>
+            <li><span class="propert-name">Maat:</span><span class="product_maat"></span></li>
             </ul>
             <input class="product_amount" type="number" value="1" min="1">
             <input class="product_id" type="hidden" name="id" data-json="">
